--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -4,6 +4,8 @@
 <script src="/public/javascripts/jquery-1.11.3.js"></script>
 <script src="/public/javascripts/govuk/shim-links-with-button-role.js"></script>
 <script src="/public/javascripts/govuk/show-hide-content.js"></script>
+<script src="/public/javascripts/govuk/modules.js"></script>
+<script src="/public/javascripts/modules/edge.js"></script>
 <script src="/public/javascripts/application.js"></script>
 
 {% if useAutoStoreData %}
