Start with helpful macros
* Radio group
* Checkbox group
* Helper method for showing a saved value in text fields

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,4 +1,5 @@
 {% extends "govuk_template.html" %}
+{% import 'macros/macros.njk' as macros  %}
 
 {% block head %}
   {% include "includes/head.html" %}
