--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -40,7 +40,7 @@
         {{ checked(name, field.name) }}
       >
       <label for="checkbox-part-{{ loop.index }}">
-        <span class="bold">{{ field.name }}</span>
+        <span {% if field.text %}class="bold"{% endif %}>{{ field.name }}</span>
         {% if field.text %}
           <br />{{ field.text | safe }}
         {% endif %}
@@ -56,10 +56,47 @@
 
 {% macro textbox(id, label, helpText = false) %}
 <div class="form-group">
-  <label class="form-label-bold" for="{{id}}">{{label}}</label>
+  <label class="form-label" for="{{id}}">{{label}}</label>
   {% if helpText %}
     <span class="form-hint">{{helpText}}</span>
   {% endif %}
   <input class="form-control" name="{{id}}" type="text" id="{{id}}" value="{{ value(id) }}">
+</div>
+{% endmacro %}
+
+{% macro textarea(id, label, rows, helpText = false) %}
+<div class="form-group">
+  <label class="form-label" for="{{id}}">{{label}}</label>
+  {% if helpText %}
+    <span class="form-hint">{{helpText}}</span>
+  {% endif %}
+  <textarea class="form-control form-control-full" rows="{{ rows }}" name="{{ id }}" id="{{ id }}">{{ value(id) }}</textarea>
+</div>
+{% endmacro %}
+
+{% macro datefields(id, label) %}
+<div class="form-group">
+  <fieldset>
+    <legend>
+      <span class="form-label-bold">
+        {{ label }}
+      </span>
+      <span class="form-hint">For example, 10 9 2019</span>
+    </legend>
+    <div class="form-date">
+      <div class="form-group form-group-day">
+        <label class="form-label" for="{{id}}-day">Day</label>
+        <input class="form-control" id="{{id}}-day" name="{{id}}-day" type="number" pattern="[0-9]*" value="{{ value(id + '-day') }}">
+      </div>
+      <div class="form-group form-group-month">
+        <label class="form-label" for="{{id}}-month">Month</label>
+        <input class="form-control" id="{{id}}-month" name="{{id}}-month" type="number" pattern="[0-9]*" value="{{ value(id + '-month') }}">
+      </div>
+      <div class="form-group form-group-year">
+        <label class="form-label" for="{{id}}-year">Year</label>
+        <input class="form-control" id="{{id}}-year" name="{{id}}-year" type="number" pattern="[0-9]*" value="{{ value(id + '-year') }}">
+      </div>
+    </div>
+  </fieldset>
 </div>
 {% endmacro %}
