--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -22,7 +22,8 @@
 
         {{ macros.textbox('study-type', 'Study type') }}
         {{ macros.datefields('start-date', 'Course start date') }}
-        {{ macros.datefields('applications-open', 'Applications open from') }}
+        {{ macros.textbox('duration', 'Course duration') }}
+        {{ macros.datefields('applications-open', 'Applications open') }}
 
         <div class="add-double-bottom-margin">
           <input type="submit" class="button" value="Save" />
