--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -13,7 +13,7 @@
   </div>
 
   <h1 class="heading-xlarge">
-    Course requirements
+    Requirements and qualifications
   </h1>
 
   <div class="grid-row">
