--- a/app/views/course/subject-description.html
+++ b/app/views/course/subject-description.html
@@ -13,14 +13,14 @@
   </div>
 
   <h1 class="heading-xlarge">
-    Subject and description
+    Title and description
   </h1>
 
   <div class="grid-row">
     <div class="column-two-thirds">
 
       <form action="/course">
-        {{ macros.textbox('subject', 'Subject') }}
+        {{ macros.textbox('title', 'Title') }}
         {{ macros.textarea('description', 'Course description', 15) }}
 
         <div class="add-double-bottom-margin">
