--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -11,6 +11,10 @@
     St Martin’s College teacher training courses
   </h1>
 
+  <div class="add-double-bottom-margin">
+    <a href="#" class="button">New course</a>
+  </div>
+
   <div class="grid-row">
     <div class="column-one-third">
       <div class="filter-category">
