--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -5,6 +5,7 @@
     more:
 #}
 {% macro radioGroup(name, fields) %}
+  <div class="form-group">
   {% for field in fields %}
     <div class="multiple-choice" data-target="radio-part-{{ loop.index }}-extra">
       <input required
@@ -27,9 +28,11 @@
       </div>
     {% endif %}
   {% endfor %}
+  </div>
 {% endmacro %}
 
 {% macro checkboxGroup(name, fields) %}
+<div class="form-group">
   {% for field in fields %}
     <div class="multiple-choice" data-target="checkbox-part-{{ loop.index }}-extra">
       <input
@@ -52,15 +55,16 @@
       </div>
     {% endif %}
   {% endfor %}
+</div>
 {% endmacro %}
 
-{% macro textbox(id, label, helpText = false) %}
+{% macro textbox(id, label, helpText = false, size = '') %}
 <div class="form-group">
-  <label class="form-label" for="{{id}}">{{label}}</label>
+  <label class="form-label" for="{{id}}">{{label | safe}}</label>
   {% if helpText %}
     <span class="form-hint">{{helpText}}</span>
   {% endif %}
-  <input class="form-control" name="{{id}}" type="text" id="{{id}}" value="{{ value(id) }}">
+  <input class="form-control {{ size }}" name="{{id}}" type="text" id="{{id}}" value="{{ value(id) }}">
 </div>
 {% endmacro %}
 
