--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -4,6 +4,12 @@
 
 {% block content %}
 <main id="content" role="main">
+  <div class="breadcrumbs">
+    <ol>
+      <li><a href="/">Home</a></li>
+    </ol>
+  </div>
+
   <h1 class="heading-xlarge">{{ title }}</h1>
 
   <div class="grid-row">
@@ -15,6 +21,20 @@
       </h3>
       <p>
         The spreadsheet sent to providers rendered as a single page form.
+      </p>
+
+      <h3 class="heading-small">
+        <a href="/history/course-with-parts">Course with parts</a>
+      </h3>
+      <p>
+        A course listing and a course view where data is broken down into parts to complete.
+      </p>
+
+      <h3 class="heading-small">
+        <a href="/history/new-course-wizard">Experimental new course wizard</a>
+      </h3>
+      <p>
+        Breaking down data required for each course into a page-per-thing wizard.
       </p>
     </div>
   </div>
