--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,56 +9,36 @@
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-two-thirds">
-
       <h1 class="heading-xlarge">
-        The GOV.UK prototype kit
-        <span class="heading-secondary">{{releaseVersion}}</span>
-      </h1>{{releaseVersion | log }}
-      <p>
-        This kit lets you rapidly create HTML prototypes of GOV.UK services.
-      </p>
+        Manage teacher training courses prototype
+      </h1>
 
-      <p>
-        It contains all you need to prototype anything from simple static pages to complex, data-driven transactions.
-      </p>
+      <ul class="list list-bullet">
+        <li>
+          <a href="/history">Design history</a>
+        </li>
+        <li>
+          <a href="https://github.com/fofr/manage-courses-prototype">Github respository</a>
+        </li>
+        <li>
+          <a href="https://dfedigital.atlassian.net/wiki/spaces/BaT/pages/319258632/Manage+courses+designs">Designs in confluence</a>
+        </li>
+      </ul>
 
-      <h2 class="heading-medium">About this page</h2>
-
-      <p>We recommend you add links to your prototype to this page, rather than delete it.
-        You'll find this page in the kit at '/app/views/index.html'.</p>
-      <p>You can change the service name by editing the file '/app/config.js'.</p>
-
-			<h2 class="heading-medium">Examples and documentation</h2>
-
-			<ul class="list list-bullet">
-				<li><a href="/docs/tutorials-and-examples">Example pages and documentation</a></li>
-				<li><a href="https://github.com/alphagov/govuk_prototype_kit">GitHub</a></li>
-			</ul>
-
-      <h2 class="heading-medium">Other resources</h2>
-
-			<ul class="list list-bullet">
-				<li>
-					<a href="https://govuk-elements.herokuapp.com/snippets/">
-						Guide to GOV.UK Elements
-					</a>
-				</li>
-				<li>
-					<a href="https://www.gov.uk/service-manual">
-						Service design manual
-					</a>
-				</li>
-				<li>
-					<a href="https://www.gov.uk/design-principles">
-						Government Digital Service Design Principles
-					</a>
-				</li>
-			</ul>
-
+      <h2 class="heading-large">Exploratory designs</h2>
+      <ul class="list list-bullet">
+        <li>
+          <a href="/onboarding">Original onboarding</a>
+        </li>
+        <li>
+          <a href="/courses">Course with parts</a>
+        </li>
+        <li>
+          <a href="/new/title">Experimental wizard</a>
+        </li>
+      </ul>
     </div>
   </div>
 </main>
 
 {% endblock %}
-
-
