Document courses and tabs approach

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,10 +28,10 @@
       <h2 class="heading-large">Exploratory designs</h2>
       <ul class="list list-bullet">
         <li>
-          <a href="/onboarding">Original onboarding</a>
+          <a href="/courses">Courses with tabs</a>
         </li>
         <li>
-          <a href="/courses">Course with parts</a>
+          <a href="/onboarding">Original onboarding</a>
         </li>
         <li>
           <a href="/new/title">Experimental wizard</a>
