--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-large">Exploratory designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/courses-and-tabs">Courses and tabs</a>
+      </h3>
+      <p>
+        Exploration of a home page view with tabs for courses, schools, default course and organisation details.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/original-onboarding">Original onboarding</a>
       </h3>
       <p>
