--- a/app/views/history/courses-and-tabs/index.html
+++ b/app/views/history/courses-and-tabs/index.html
@@ -37,6 +37,10 @@
     <p>When there are many courses, how do you find them?</p>
   ') }}
 
+  {{ macros.screenshot('Courses by study option', 'courses-by-study-option', '/public/images/history/courses-and-tabs/thumbnails/01b-courses-by-study-option.png', '/public/images/history/courses-and-tabs/01b-courses-by-study-option.png', '
+    <p>An alternative view where the study option is pulled out of the table to reduce the number of rows for courses with many options and schools.</p>
+  ') }}
+
   {{ macros.screenshot('Organisation', 'organisation', '/public/images/history/courses-and-tabs/thumbnails/02-organisation.png', '/public/images/history/courses-and-tabs/02-organisation.png', '') }}
 
   {{ macros.screenshot('Edit organisation', 'edit-organisation', '/public/images/history/courses-and-tabs/thumbnails/03-edit-organisation.png', '/public/images/history/courses-and-tabs/03-edit-organisation.png', '') }}
