Answer pagination and filtering questions

--- a/app/views/history/courses-and-tabs/index.html
+++ b/app/views/history/courses-and-tabs/index.html
@@ -33,8 +33,18 @@
 
     <h3 class="heading-medium">Questions</h3>
 
-    <p>Should the page be paginated?</p>
-    <p>When there are many courses, how do you find them?</p>
+    <p class="bold">Should the page be paginated?</p>
+
+    <ul class="list list-bullet">
+      <li>30% of providers have only 1 or 2 courses</li>
+      <li>85% of providers have 20 or fewer courses</li>
+      <li>10% of providers have 50-100 courses</li>
+    </ul>
+
+
+    <p class="bold">When there are many courses, how do you find them?</p>
+
+    <p>With a maximum of 100 courses, and with most providers having 20 or fewer courses, ordering by subject should be enough.</p>
   ') }}
 
   {{ macros.screenshot('Courses by study option', 'courses-by-study-option', '/public/images/history/courses-and-tabs/thumbnails/01b-courses-by-study-option.png', '/public/images/history/courses-and-tabs/01b-courses-by-study-option.png', '
