Add details on course numbers

--- a/app/views/history/courses-and-tabs/index.html
+++ b/app/views/history/courses-and-tabs/index.html
@@ -41,6 +41,7 @@
       <li>10% of providers have 50-100 courses</li>
     </ul>
 
+    <p>We will classify some of these as variants of the same course, so numbers will be less. Some courses from School Direct schools may be bundled up into courses by the overall provider, so the number may increase. The net ought to be similar.</p>
 
     <p class="bold">When there are many courses, how do you find them?</p>
 
